--- a/MySite/MySite.html
+++ b/MySite/MySite.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UFT-8" />
     <!-- viewportの設定 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="MySite.css">
     <link rel="shortcut icon" href="img/favicon.ico">
     <script src="https://kit.fontawesome.com/969a356484.js" crossorigin="anonymous"></script>
@@ -175,9 +175,9 @@
           <div class="right-content">
             <div class="right-contact-content">
               <h3 class="discription-title">SNS</h3>
-              <i class="fa fa-facebook fa-5x" aria-hidden="true"></i>
-              <i class="fa fa-twitter fa-5x" aria-hidden="true"></i>
-              <i class="fa fa-instagram fa-5x" aria-hidden="true"></i>
+              <i class="fab fa-facebook-f" aria-hidden="true"></i>
+              <i class="fab fa-twitter" aria-hidden="true"></i>
+              <i class="fab fa-instagram" aria-hidden="true"></i>
             </div>
           </div>
         </div>
@@ -191,3 +191,11 @@
 
   </body>
 </html>
+
+<body>
+	<div class="12"></div>
+</body>
+
+<body>
+  <div class="12"></div>
+</body>
