--- a/review_演習問題/review：HTML・CSS/review_1-8.html
+++ b/review_演習問題/review：HTML・CSS/review_1-8.html
@@ -11,7 +11,7 @@
     <title>review_1-8</title>
   </head>
   <body>
-    <div class="list-set">
+    <div>
       <ul>
         <li>リスト1</li>
         <li>リスト2</li>
