--- a/review_演習問題/review：HTML・CSS/review_Flexbox.html
+++ b/review_演習問題/review：HTML・CSS/review_Flexbox.html
@@ -20,7 +20,26 @@
         <div class="header-item"></div>
       </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <div class="left-main"></div>
+      <div class="right-main">
+        <div class="right-main-item"></div>
+        <div class="right-main-item"></div>
+        <div class="right-main-item"></div>
+        <div class="right-main-item"></div>
+        <div class="right-main-item"></div>
+        <div class="right-main-item"></div>
+        <div class="right-main-item"></div>
+        <div class="right-main-item"></div>
+        <div class="right-main-item"></div>
+      </div>
+    </main>
+    <footer>
+      <div class="footer-set">
+        <div class="footer-item"></div>
+        <div class="footer-item"></div>
+        <div class="footer-item"></div>
+      </div>
+    </footer>
   </body>
 </html>
